feat(conclusiones_consultas): added endpoints
