# Backend/src/routes/consultas.routes.js
@@ -1,11 +1,13 @@
 import { Router } from 'express'
 import { getConsultaController, startConsultaController,
 	endConsultaController, getNotasConsultaController,
-	postNotaConsultaController }
+	postNotaConsultaController, getConclusionConsultaController,
+	postConclusionConsultaController }
 	from '../controllers/consultasController.js';
 import { validateGetConsulta, validateStartConsulta,
 	validateEndConsulta, validateGetNotasConsulta,
-	validatePostNotaConsulta }
+	validatePostNotaConsulta, validateGetConclusionConsulta,
+	validatePostConclusionConsulta }
 	from '../middlewares/consultasMiddleware.js';
 
 const router = Router();
@@ -20,5 +22,9 @@ router.get('/consultas/:id_consulta/notas',
 	validateGetNotasConsulta, getNotasConsultaController);
 router.post('/consultas/:id_consulta/notas/agregar',
 	validatePostNotaConsulta, postNotaConsultaController);
+router.get('/consultas/:id_consulta/notas/conclusion',
+	validateGetConclusionConsulta, getConclusionConsultaController);
+router.post('/consultas/:id_consulta/notas/conclusion/agregar',
+	validatePostConclusionConsulta, postConclusionConsultaController);
 
 export default router;
